<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExerciseOneFragment">

    <FrameLayout
        android:id="@+id/flYoutube"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/ex_1_title"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"

                android:text="@string/ex_1_description" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/countdownOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/startOrPauseOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/start_ex" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressOne"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:progress="100"
                    android:progressDrawable="@drawable/progress_circle" />
            </RelativeLayout>

            <Button
                android:id="@+id/resetBtnOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="4dp"
                android:minHeight="45dp"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

            <EditText
                android:id="@+id/resultInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_background"
                android:ems="10"
                android:hint="@string/number_of_reps"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/nextExBtnOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/btn_background"
                android:minHeight="45dp"
                android:text="@string/next_exercise_btn"
                android:textAllCaps="false"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
