<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1.0"
    android:fillViewport="true"
    tools:context=".exercisefragments.ExerciseOneNoCamFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/ex_1_title"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:id="@+id/countdownWrapper"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/countdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/startBtnInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/start_ex" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:progressBarStyleHorizontal"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_centerInParent="true"
                android:progress="1000"
                android:max="1000"
                android:progressDrawable="@drawable/progress_countdown" />
        </RelativeLayout>


        <!--    <NumberPicker-->
        <!--        android:id="@+id/numberPicker"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_gravity="center"-->
        <!--        android:theme="@style/NumberPickerText"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintHorizontal_bias="0.5"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent" />-->

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="4dp"
                android:minHeight="45dp"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

            <Button
                android:id="@+id/nextExBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/btn_background"
                android:minHeight="45dp"
                android:text="@string/next_exercise_btn"
                android:textAllCaps="false"
                android:textColor="#ffffff" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>